# minesweeper

./: .dockerignore  .gitignore  .releaserc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.sbt  deployment.yaml  docker-run.sh  kube.yaml  run-kube.sh  sbt-start.sh  sonar-kubernetes-init.sh  start.sh
k8s/: postgres-service.yaml  sq-service.yaml
presentation/: ComponentDiagram.tex
project/: plugins.sbt
rust/: .releaserc  Cargo.toml  README.md
rust/.github/workflows/: release.yml
rust/src/main/: app.rs  config.rs  main.rs  observer.rs
rust/src/main/model/: field.rs  mod.rs
rust/src/main/view/tui/: app.rs  mod.rs  terminal.rs
saves/: README.md
sq-community-build/: docker-compose.yml
src/main/: main.rs
src/main/model/: board.rs  field.rs
src/main/scala/de/htwg/winesmeeper/: Config.scala  Main.scala  Observer.scala  README.md
src/main/scala/de/htwg/winesmeeper/Controller/: ControllerTrait.scala  README.md
src/main/scala/de/htwg/winesmeeper/Controller/Commands/: AbstractCmdCOR.scala  README.md  SysCommandManagerTrait.scala  TurnCmdManagerTrait.scala
src/main/scala/de/htwg/winesmeeper/Controller/ImplController/: CORStat.scala  Controller.scala  GameState.scala
src/main/scala/de/htwg/winesmeeper/Controller/Save/: SavedData.scala  SaverTrait.scala
src/main/scala/de/htwg/winesmeeper/Model/: BoardTrait.scala  FieldTrait.scala
src/main/scala/de/htwg/winesmeeper/Model/ImplBoard/: Board.scala
src/main/view/tui/: app.rs  terminal.rs
(+24 files in other folders)
